[project]
name = "nlm-torch"
version = "0.1.0"
description = "PyTorch-based implementation of non-local means with GPU support."
authors = ["lucianchauvin <me@lucianchauvin.com>", "josegcpa <jose.almeida@research.fchampalimaud.pt>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "torch_nlm"}]
dependencies = [
    "einops>=0.8.1",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "pywavelets>=1.8.0",
    "scikit-image>=0.25.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
